syntax = "proto3";

package com.meeting;

option java_package = "com.meeting";
option java_outer_classname = "UserCalendarAndSuggestionsProto";
option java_multiple_files = true;

import "service/calendar/calendar_event.proto";
import "google/type/datetime.proto";
import "google/protobuf/duration.proto";

service UserCalendarsAndSuggestionsService {

  rpc GetUserCalendarAndSuggestions(ProtoUserCalendarsAndSuggestionsRequest)
      returns (ProtoUserCalendarEventsWithSuggestionsResponse);

}

message ProtoUserCalendarsAndSuggestionsRequest {
  uint32 org_id = 1;
  repeated string calendar_id = 2;

  // The zoned start date time selected by user, or the current date time at
  // users side if no specific time is selected.
  google.type.DateTime start_date = 3;
  optional google.protobuf.Duration duration = 4;
}

message ProtoUserCalendarEventsWithSuggestionsResponse {

  // Calendar events for all calendar ids
  repeated ProtoUserCalendarEvents user_calendars = 1;

  // Start time and end time for meeting timeslot suggestions
  repeated ProtoCalendarEvent suggestions = 2;
}